ws-slo/apps/immich/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/pci-0300_8086.present
                    operator: In
                    values:
                      - "true"
              - matchExpressions:
                  - key: feature.node.kubernetes.io/pci-0380_1002.present
                    operator: In
                    values:
                      - "true"
      containers:
        - name: immich
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/upload
            - name: timeline-data
              mountPath: /mnt/timeline
              readOnly: true
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: timeline-data
          persistentVolumeClaim:
            claimName: timeline-data
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
